--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,9 @@ allprojects {
         google()
         mavenCentral()
     }
+dependencies {
+    classpath  'com.google.gms.google-services:4.4.1'
+    }
 }
 
 rootProject.buildDir = '../build'
