--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   salomon_bottom_bar: ^3.3.2
   firebase_auth: ^4.19.0
+  image_picker: ^1.0.8
+  image_picker_web: ^3.1.1
 
 dev_dependencies:
   flutter_test:
